<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextLastName"
        android:layout_alignStart="@+id/editTextLastName"
        android:ems="10"
        android:hint="@string/hint_firstname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextUsername"
        android:layout_alignStart="@+id/editTextUsername"
        android:ems="10"
        android:hint="@string/hint_lastname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextRePassword"
        android:layout_alignStart="@+id/editTextRePassword"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextRePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/CreatePotBtn"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/hint_confpwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/CreatePotBtn"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_signin"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_above="@+id/CancelBtn"
        android:layout_alignStart="@+id/CancelBtn" />

    <Button
        android:id="@+id/CancelBtn"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_cancel"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreatePotBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>