<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textViewUsername"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/BalanceBtn"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_balance"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/ModifprofileBtn"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/CreatePotBtn"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_createpot"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_below="@+id/BalanceBtn"
        android:layout_alignStart="@+id/BalanceBtn" />

    <Button
        android:id="@+id/ViewPotsBtn"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/CreatePotBtn"
        android:layout_below="@+id/CreatePotBtn"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_viewpots"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/ModifprofileBtn"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_modifprofile"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_below="@+id/ViewPotsBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/SettingsBtn"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_settings"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_below="@+id/ModifprofileBtn"
        android:layout_alignStart="@+id/ModifprofileBtn" />

    <Button
        android:id="@+id/QuitBtn"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_quit"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="93dp"
        android:layout_below="@+id/ModifprofileBtn"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="Unknown user"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>