<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g4.pcomm.StartingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        android:id="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.482"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/CreatePotBtn"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginBottom="163dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_signin"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/background_light"
        android:text="@string/btn_login"
        android:textColor="?android:attr/detailsElementBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreatePotBtn"
        android:layout_above="@+id/CreatePotBtn"
        android:layout_alignStart="@+id/CreatePotBtn" />

</RelativeLayout>
