<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/SVPotList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="31dp"
                android:text="Unknown user" />

            <TextView
                android:id="@+id/TVAppTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewUsername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="31dp"
                android:text="@string/app_name"
                android:textColor="@android:color/background_light"
                android:textSize="50sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.787" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/TVAppTitle"
                android:layout_centerHorizontal="true"
                android:text="@string/app_title"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/RLPotList"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TVAppTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="27dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/LLSVPotList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                    <Button
                        android:id="@+id/QuitBtn"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:backgroundTint="@android:color/background_light"
                        android:text="@string/btn_quit"
                        android:textColor="?android:attr/detailsElementBackground"
                        app:layout_constraintLeft_toLeftOf="parent" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>